# oppia-proto-api

./: BUILD  README.md  WORKSPACE
.github/workflows/: bazel_build.yml  lint.yml
defs/: BUILD  buf.yaml  defs.bzl
org/oppia/proto/: BUILD
org/oppia/proto/v1/: BUILD
org/oppia/proto/v1/api/: BUILD  android.proto
org/oppia/proto/v1/structure/: BUILD  classroom.proto  concept_card.proto  exploration.proto  image.proto  languages.proto  objects.proto  question.proto  revision_card.proto  state.proto  topic_summary.proto
org/oppia/proto/v1/versions/: BUILD  BUILD.bazel  api_versions.proto  structure_versions.proto
org/oppia/repo/: toolchains.bzl
proto/v1/: BUILD
proto/v1/api/: BUILD  android.proto
proto/v1/structure/: BUILD  concept_card.proto  exploration.proto  image.proto  languages.proto  objects.proto  question.proto  revision_card.proto  state.proto  topic_summary.proto  versions.proto
proto/v1/versions/: BUILD.bazel  api_versions.proto  structure_versions.proto
repo/: BUILD  deps.bzl  toolchains.bzl  versions.bzl
