"""
TODO
"""

load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "versions_proto",
    srcs = [
        "api_versions.proto",
        "structure_versions.proto",
    ],
    strip_import_prefix = "",  # Strip the default file prefix so that it may be redefined.
    import_prefix = "org/oppia/proto/v1/versions",  # Make directory prefix match declared package.
    visibility = [
        "//:api_visibility",
        "//:proto_impl_visibility",
    ],
    deps = [
      "@com_google_protobuf//:descriptor_proto",
    ],
)
